--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LabWorks">
-        <activity android:name=".Lab4Task1">
+        <activity android:name=".Lab5Task1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Lab3Task1">
+        <activity android:name=".Lab4Task1">
 
         </activity>
+        <activity android:name=".Lab3Task1"></activity>
         <activity android:name=".Lab2Task3" />
-        <activity android:name=".Lab2Task2"></activity>
+        <activity android:name=".Lab2Task2" />
         <activity android:name=".Lab2Task1" />
         <activity android:name=".Task5" />
         <activity android:name=".Task4" />
